src/Test/Fixtures/Good/Arrays/negativeI64RepeatArrayDeclaration.lf
let zeros : [i64; 4] = - [0; 4];