src/Test/Fixtures/Bad/Arrays/missingRepeatCountInArrayDeclaration.lf
let zeros: [i32; 3] = [0; ];